ProTrackDev/force-app/main/default/objects/TR_Epic__c/TR_Epic__c.object-meta.xml
<CustomObject>
    <description>Business Description: This object is used to store Epics. These are a superset of user stories.</description>
    <label>Epic</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Epic Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>