ProTrackDev/force-app/main/default/objects/TR_Epic__c/fields/TR_Epic_Details__c.field-meta.xml
<CustomField>
    <fullName>TR_Epic_Details__c</fullName>
    <label>Epic Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>