ProTrackDev/force-app/main/default/objects/TR_Epic__c/fields/TR_Epic_Name__c.field-meta.xml
<CustomField>
    <fullName>TR_Epic_Name__c</fullName>
    <label>Epic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>