ProTrackDev/force-app/main/default/objects/TR_Epic__c/fields/TR_Status__c.field-meta.xml
<CustomField>
    <fullName>TR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Draft</fullName>
            </value>
            <value>
                <fullName>2. In Progress</fullName>
            </value>
            <value>
                <fullName>3. Ready for Review</fullName>
            </value>
            <value>
                <fullName>4. Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>