ProTrackDev/force-app/main/default/objects/TR_Epic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TR_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>